# polarbear_2025_algorithm_tutorial

./: README.md
example1_cpp_opencv/: CMakeLists.txt  README.md
example1_cpp_opencv/include/: ImageProcessor.hpp
example1_cpp_opencv/src/: ImageProcessor.cpp  main.cpp
hw1_euler_to_quaternion_ws/: .gitignore  README.md
hw1_euler_to_quaternion_ws/src/euler_to_quaternion/: CMakeLists.txt  package.xml
hw1_euler_to_quaternion_ws/src/euler_to_quaternion/include/euler_to_quaternion/: euler_to_quaternion_node.hpp
hw1_euler_to_quaternion_ws/src/euler_to_quaternion/launch/: bringup_launch.py  euler_to_quaternion_launch.py  rviz_launch.py
hw1_euler_to_quaternion_ws/src/euler_to_quaternion/rviz/: euler_to_quaternion.rviz
hw1_euler_to_quaternion_ws/src/euler_to_quaternion/src/: euler_to_quaternion_node.cpp
hw1_euler_to_quaternion_ws/src/euler_to_quaternion_interface/: CMakeLists.txt  package.xml
